--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -3,7 +3,8 @@
 		display: none;
 	}
 	.header .menu li {
-		margin-right: 0;
+		/*margin-right: 0;*/
+		padding: 0 10px;
 	}
 	.header .menu li.desk-hide {
 		display: inline-block;
@@ -42,6 +43,7 @@
 		padding: 0;
 		border: none;
 		width: 100%;
+		margin: 0;
 	}
 	.header .navbar-collapse.collapse.in {
 		display: block !important;
@@ -57,6 +59,8 @@
 	}
 	.header .navbar-collapse ul {
 		display: block;
+		width: 100%;
+		box-shadow: none;
 	}
 	.header .navbar-collapse ul li {
 		display: block;
@@ -355,5 +359,299 @@
 	.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar,
 	.mCSB_scrollTools .mCSB_dragger:active .mCSB_dragger_bar {
 		background-color: #007bbc;
+	}
+}
+@media (max-width: 767px) {
+	.header .navbar-header {
+		position: absolute;
+		left: 10px;
+		top: -75px;
+	}
+	.logo {
+		margin-left: 30px;
+	}
+	.menu ul {
+		display: none;
+	}
+	.header .menu {
+		min-height: auto;
+	}
+	.header .navbar-default .navbar-brand {
+		display: none;
+	}
+	.navbar-default .navbar-toggle .icon-bar {
+		background: #007bbc;
+	}
+	.header-top .btn {
+		display: none;
+	}
+	.phone .phone-notice {
+		display: none;
+	}
+	.phones {
+		float: right;
+		margin-top: 10px;
+	}
+	.phones:before {
+		display: none;
+	}
+	.city {
+		display: none;
+	}
+	.tour-preview {
+		max-width: 100%;
+	}
+	.tour-filter {
+		padding-bottom: 30px;
+	}
+	.tour-filter form {
+		font-size: 0;
+		text-align: center;
+	}
+	.tour-filter-item,
+	.tour-filter-item.category,
+	.tour-filter-item.value {
+		width: 100%;
+		margin-right: 0;
+		font-size: 15px;
+		text-align: left;
+		margin-bottom: 13px;
+	}
+	.tour-filter-item.value input {
+		width: 49.75%;
+	}
+	.date-mob,
+	.time-mob {
+		width: 49%;
+	}
+	.date-mob {
+		margin-right: 2%;
+	}
+	.tour-filter-more {
+		font-size: 15px;
+		margin-bottom: 15px;
+		margin-right: 0;
+	}
+	.tour-filter .btn {
+		font-size: 15px;
+		display: block;
+		margin: 0 auto;
+	}
+	.tour-filter-item.time-mob .jq-selectbox {
+		width: 49.49%;
+	}
+	.tour-filter-item label span {
+		padding-left: 0;
+		text-align: center;
+	}
+	.popular-tours {
+		margin-bottom: 15px;
+	}
+	.title {
+		text-align: center;
+		font-size: 20px;
+	}
+	.popular-tours-items td {
+		display: block;
+		width: 100%;
+	}
+	.popular-tours-item.small {
+		padding: 45px 10px;
+	}
+	.popular-tours-item.small .popular-tours-item-title {
+		font-size: 18.5px;
+	}
+	.popular-tours-item.small span:last-child:before {
+		content: "";
+		display: block;
+		font-size: 0;
+		opacity: 0;
+	}
+	.hot:before {
+		display: none;
+	}
+	.tours-notes-items > div {
+		margin-bottom: 0;
+	}
+	.tours-notes-item {
+		position: relative;
+	}
+	.tours-notes-item-cont {
+		position: absolute;
+	    bottom: 0;
+	    width: 100%;
+	    text-align: center;
+	    color: #fff;
+	}
+	.tours-notes-item-img img {
+		width: 100%;
+	}
+	.tours-notes-item-cont p {
+		display: none;
+	}
+	.tours-notes-items-wrap .btn-more-tours {
+		margin-top: 0;
+	}
+	.popular-category {
+		margin-top: 20px;
+	}
+	.sidebar {
+	    border: 1px solid #e1e1e1;
+	}
+	.sidebar-city-tour {
+		display: block;
+		width: 100%;
+		text-align: center;
+		margin-bottom: 8px;
+	}
+	.sidebar > .sidebar-city-tour:first-child ul {
+		padding-left: 10px;
+	}
+	.sidebar-tour-title {
+	    color: #fff;
+    	background: #3d4454;
+    	margin-bottom: 25px;
+	}
+	.sidebar-tour-subtitle {
+	    padding: 16px 40px 16px 45px;
+	    background: #f7f8fd;
+	}
+	.sidebar-city-tour > a {
+		margin-bottom: 13px;
+	}
+	.seo-txt {
+		text-align: center;
+	}
+	.subscription input, 
+	.subscription .jq-selectbox {
+		display: block;
+		width: 100%;
+		margin: 0;
+	}
+	.subscription .jq-selectbox {
+		margin-bottom: 10px;
+	}
+	.subscription .btn {
+		margin: 0 auto;
+		margin-top: 23px;
+		float: none;
+	}
+	.about-company ul {
+		list-style-type: none;
+	}
+	.about-company {
+		text-align: center;
+	}
+	.news-company {
+		text-align: center;
+	}
+	#mCSB_2_container {
+		display: -ms-flexbox;
+	    display: -webkit-flex;
+	    display: flex;
+	    -webkit-flex-direction: row;
+	    -ms-flex-direction: row;
+	    flex-direction: row;
+	    -webkit-flex-wrap: nowrap;
+	    -ms-flex-wrap: nowrap;
+	    flex-wrap: nowrap;
+	    -webkit-justify-content: flex-start;
+	    -ms-flex-pack: start;
+	    justify-content: flex-start;
+	    -webkit-align-content: stretch;
+	    -ms-flex-line-pack: stretch;
+	    align-content: stretch;
+	    -webkit-align-items: flex-start;
+	    -ms-flex-align: start;
+	    align-items: flex-start;
+	}
+	.partners-items > div {
+		padding-right: 0;
+	}
+	#mCSB_2_container > div {
+		min-width: 200px;
+	}
+	.footer .container {
+		padding-top: 25px;
+		padding-bottom: 15px;
+	}
+	.footer .row {
+		display: block;
+	}
+	.footer .row > div {
+		display: block;
+		margin: 0 auto;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+	.sitemap-item {
+		margin-bottom: 30px;
+		display: block;
+		text-align: center;
+	}
+	.sitemap-item .phone {
+		margin: 0 auto 10px auto;
+	}
+	.sidebar-city-tour ul li.with-flag {
+	    width: 180px;
+	    text-align: left;
+	    margin-left: auto;
+	    margin-right: auto;
+	    padding-left: 20px;
+	}
+	.footer-logo .logo {
+		margin-left: 0;
+	}
+	.seo-txt {
+		margin-top: 30px;
+	}
+	.seo-txt h2 {
+		font-size: 20px;
+	}
+	.sitemap-items > div {
+		padding-right: 15px;
+	}
+	.burning-tours-filter {
+		margin-left: 0;
+		margin-right: 0;
+	}
+	.info-company {
+		margin-top: 30px;
+	}
+	.info-company h3 {
+		font-size: 20px;
+	}
+	.popular-tours-item {
+		padding-left: 15px;
+	}
+	.popular-tours-item-cont {
+		bottom: 20px;
+	}
+	.popular-tours-item.small form .btn {
+		padding: 0 12px;
+	}
+}
+@media (max-width: 655px) {
+	.burning-tours-filter a {
+		padding: 0 5px;
+		font-size: 12px;
+	}
+}
+@media (max-width: 320px) {
+	.burning-tours-filter {
+		display: -ms-flexbox;
+	    display: -webkit-flex;
+	    display: flex;
+	    -webkit-flex-direction: row;
+	    -ms-flex-direction: row;
+	    flex-direction: row;
+	    -webkit-flex-wrap: wrap;
+	    -ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	    -webkit-justify-content: space-between;
+	    -ms-flex-pack: justify;
+	    justify-content: space-between;
+	    border-right: none;
+	    border-left: none;
 	}
 }
